# Math_Mentor

./: .env.example  .gitignore  README.md  app.py  code_explained.md  pyproject.toml  requirements.txt
.streamlit/: config.toml  secrets.toml.example
agents/: __init__.py  explainer_agent.py  orchestrator.py  parser_agent.py  router_agent.py  solver_agent.py  verifier_agent.py
input_handlers/: __init__.py  audio_handler.py  image_handler.py  text_handler.py
knowledge_base/: algebra_inequalities.md  algebra_logarithms.md  algebra_polynomials.md  algebra_quadratic.md  algebra_sequences.md  algebra_systems.md  calculus_derivatives.md  calculus_integration.md  calculus_limits.md  calculus_optimization.md  common_mistakes.md  domain_constraints.md  linear_algebra_determinants.md  linear_algebra_matrices.md  linear_algebra_vectors.md  probability_basics.md  probability_combinatorics.md  probability_distributions.md  solution_templates.md  trigonometry_formulas.md
memory/: __init__.py  memory_store.py
rag/: __init__.py  embeddings.py  knowledge_base.py  retriever.py
utils/: config.py  llm.py  math_tools.py
